--- a/script.py.ipynb
+++ b/script.py.ipynb
@@ -2,67 +2,29 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 30,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import pandas as pd\n",
-    "\n",
-    "out_patient_df = pd.read_csv('data_files/outpatient_details_dump.csv', header=0, delimiter=',')\n",
-    "\n",
-    "no_of_columns = 7\n",
-    "list_of_headers = ['RegistrationNo','OPDATE', 'PatName', 'Amount', 'Department', 'Status', 'DISCOUNT']"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 84,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Data can be cleaned\n"
+      "   registrationno              opdate  patname  amount  \\\n",
+      "0               1 2014-01-04 07:14:00  Osbourn   600.0   \n",
+      "1               2 2014-01-04 07:49:00  Malvina   400.0   \n",
+      "2               3 2014-01-04 07:56:00   Maible   450.0   \n",
+      "3               4 2014-01-04 07:58:00     Jada   400.0   \n",
+      "4               5 2014-01-04 08:03:00   Farrel   450.0   \n",
+      "\n",
+      "                          department               status  discount  \n",
+      "0                      CRITICAL CARE  Casualty -Emergency         0  \n",
+      "1                  INTERNAL MEDICINE       OP Consultaion         0  \n",
+      "2                      NEURO SURGERY       OP Consultaion         0  \n",
+      "3                  INTERNAL MEDICINE            Follow up         0  \n",
+      "4  GASTROENTEROLOGY & G.I. ENDOSCOPY            Follow up         0  \n"
      ]
     }
    ],
-   "source": [
-    "if len(out_patient_df.columns) > 1:\n",
-    "    if list_of_headers == list(out_patient_df):\n",
-    "        if len(out_patient_df.columns) == no_of_columns:\n",
-    "            print(\"Data can be cleaned\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 33,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Data is proper\n"
-     ]
-    }
-   ],
-   "source": [
-    "delimiter_check = len(out_patient_df.columns) > 1\n",
-    "header_content_check = list_of_headers == list(out_patient_df)\n",
-    "no_of_columns_check = len(out_patient_df.columns) == no_of_columns\n",
-    "\n",
-    "if delimiter_check is True and header_content_check is True and no_of_columns_check is True:\n",
-    "    print(\"Data is proper\")\n",
-    "else:\n",
-    "    print(\"Data is not proper\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 36,
-   "metadata": {},
-   "outputs": [],
    "source": [
     "import pandas as pd\n",
     "\n",
@@ -98,6 +60,22 @@
     "        header_content_check = list_of_headers == list(out_patient_df)\n",
     "        no_of_columns_check = len(out_patient_df.columns) == no_of_columns\n",
     "        return delimiter_check, header_content_check, no_of_columns_check\n",
+    "    \n",
+    "    def clean_data(self, out_patient_df):\n",
+    "        \"\"\"\n",
+    "        This method cleans inconsistent data and converts datatype of some columns\n",
+    "        i) lower column name\n",
+    "        ii)  replace spacing between column headers with underscore\n",
+    "        iii) format date to standard format\n",
+    "        iv)  format registration no. to integer datatype\n",
+    "        v)   format amount in float datatype\n",
+    "        \"\"\"\n",
+    "        out_patient_df.columns = map(str.lower, out_patient_df.columns)\n",
+    "        out_patient_df.columns = out_patient_df.columns.str.replace(\" \", \"_\")\n",
+    "        out_patient_df['opdate'] = pd.to_datetime(out_patient_df['opdate'])\n",
+    "        out_patient_df['registrationno'] = out_patient_df['registrationno'].astype(int)\n",
+    "        out_patient_df['amount'] = out_patient_df['amount'].astype(float)\n",
+    "        return out_patient_df\n",
     "\n",
     "\n",
     "if __name__ == '__main__':\n",
@@ -105,6 +83,10 @@
     "    out_patient_df = opclean.reading_csv()\n",
     "    no_of_columns, list_of_headers = opclean.benchmark() \n",
     "    delimiter_check, header_content_check, no_of_columns_check = opclean.validation_fn(out_patient_df, no_of_columns, list_of_headers)\n",
+    "    \n",
+    "    if delimiter_check and header_content_check and no_of_columns_check:\n",
+    "        out_patient_clean_df = opclean.clean_data(out_patient_df)\n",
+    "        print(out_patient_clean_df.head())\n",
     "    "
    ]
   },
