Added writing clean csv method and removed unwanted cells

--- a/script.py.ipynb
+++ b/script.py.ipynb
@@ -2,35 +2,15 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "   registrationno              opdate  patname  amount  \\\n",
-      "0               1 2014-01-04 07:14:00  Osbourn   600.0   \n",
-      "1               2 2014-01-04 07:49:00  Malvina   400.0   \n",
-      "2               3 2014-01-04 07:56:00   Maible   450.0   \n",
-      "3               4 2014-01-04 07:58:00     Jada   400.0   \n",
-      "4               5 2014-01-04 08:03:00   Farrel   450.0   \n",
-      "\n",
-      "                          department               status  discount  \n",
-      "0                      CRITICAL CARE  Casualty -Emergency         0  \n",
-      "1                  INTERNAL MEDICINE       OP Consultaion         0  \n",
-      "2                      NEURO SURGERY       OP Consultaion         0  \n",
-      "3                  INTERNAL MEDICINE            Follow up         0  \n",
-      "4  GASTROENTEROLOGY & G.I. ENDOSCOPY            Follow up         0  \n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import pandas as pd\n",
     "\n",
     "class OutPatientCleaning:\n",
     "    \n",
-    "    def reading_csv(self):\n",
+    "    def read_csv(self):\n",
     "        \"\"\"\n",
     "        this method  will read outpatient_details_dump.csv file\n",
     "        return: out_patient_df\n",
@@ -76,18 +56,25 @@
     "        out_patient_df['registrationno'] = out_patient_df['registrationno'].astype(int)\n",
     "        out_patient_df['amount'] = out_patient_df['amount'].astype(float)\n",
     "        return out_patient_df\n",
+    "    \n",
+    "    def write_clean_csv(self, out_patient_clean_df):\n",
+    "        \"\"\"\n",
+    "        this method  will write clean_outpatient_details_dump.csv file in cleanfiles/ directory\n",
+    "        return: True\n",
+    "        \"\"\"\n",
+    "        out_patient_clean_df.to_csv('clean_files/clean_outpatient_details_dump.csv',encoding='utf-8', index=False)\n",
+    "        return True\n",
     "\n",
     "\n",
     "if __name__ == '__main__':\n",
     "    opclean = OutPatientCleaning()\n",
-    "    out_patient_df = opclean.reading_csv()\n",
+    "    out_patient_df = opclean.read_csv()\n",
     "    no_of_columns, list_of_headers = opclean.benchmark() \n",
     "    delimiter_check, header_content_check, no_of_columns_check = opclean.validation_fn(out_patient_df, no_of_columns, list_of_headers)\n",
     "    \n",
     "    if delimiter_check and header_content_check and no_of_columns_check:\n",
     "        out_patient_clean_df = opclean.clean_data(out_patient_df)\n",
-    "        print(out_patient_clean_df.head())\n",
-    "    "
+    "        opclean.write_clean_csv(out_patient_clean_df)\n"
    ]
   },
   {
