Added write csv method

--- a/patient_details_script.ipynb
+++ b/patient_details_script.ipynb
@@ -2,28 +2,9 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "0      NaN\n",
-      "1      NaN\n",
-      "2      NaN\n",
-      "3      NaN\n",
-      "4      NaN\n",
-      "        ..\n",
-      "1995   NaN\n",
-      "1996   NaN\n",
-      "1997   NaN\n",
-      "1998   NaN\n",
-      "1999   NaN\n",
-      "Name: ipid, Length: 2000, dtype: float64\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import pandas as pd\n",
     "\n",
@@ -77,6 +58,14 @@
     "#         patient_df['ipid'] = patient_df['ipid'].astype(int)\n",
     "        return patient_df\n",
     "\n",
+    "    def write_clean_csv(self, patient_clean_df):\n",
+    "        \"\"\"\n",
+    "        this method  will write clean_patient_details_dump.csv file in cleanfiles/ directory\n",
+    "        return: True\n",
+    "        \"\"\"\n",
+    "        patient_clean_df.to_csv('clean_files/clean_patient_details_dump.csv',encoding='utf-8', index=False)\n",
+    "        return True\n",
+    "\n",
     "if __name__ == '__main__':\n",
     "    pclean = PatientCleaning()\n",
     "    patient_df = pclean.read_csv()\n",
@@ -85,124 +74,11 @@
     "    \n",
     "    if delimiter_check and header_content_check and no_of_columns_check:\n",
     "        patient_clean_df = pclean.clean_data(patient_df)\n",
-    "        print(patient_clean_df.ipid)\n",
+    "        pclean.write_clean_csv(patient_clean_df)\n",
+    "                \n",
+    "\n",
     "\n",
     "                "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>REGISTRATIONNO</th>\n",
-       "      <th>PATIENTNAME</th>\n",
-       "      <th>Age</th>\n",
-       "      <th>IPID</th>\n",
-       "      <th>Gender</th>\n",
-       "      <th>ADMITDATETIME</th>\n",
-       "      <th>DISCHARGEDATETIME</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>1</td>\n",
-       "      <td>Osbourn</td>\n",
-       "      <td>26</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>Female</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>2</td>\n",
-       "      <td>Malvina</td>\n",
-       "      <td>62</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>Female</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>3</td>\n",
-       "      <td>Maible</td>\n",
-       "      <td>34</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>Male</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>4</td>\n",
-       "      <td>Jada</td>\n",
-       "      <td>38</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>Female</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>5</td>\n",
-       "      <td>Farrel</td>\n",
-       "      <td>76</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>Female</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "   REGISTRATIONNO PATIENTNAME  Age  IPID  Gender ADMITDATETIME  \\\n",
-       "0               1     Osbourn   26   NaN  Female           NaN   \n",
-       "1               2     Malvina   62   NaN  Female           NaN   \n",
-       "2               3      Maible   34   NaN    Male           NaN   \n",
-       "3               4        Jada   38   NaN  Female           NaN   \n",
-       "4               5      Farrel   76   NaN  Female           NaN   \n",
-       "\n",
-       "  DISCHARGEDATETIME  \n",
-       "0               NaN  \n",
-       "1               NaN  \n",
-       "2               NaN  \n",
-       "3               NaN  \n",
-       "4               NaN  "
-      ]
-     },
-     "execution_count": 2,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "patient_df.head()"
    ]
   },
   {
