Added validation method for patient discharge details

--- a/patient_discharge_details_script.ipynb
+++ b/patient_discharge_details_script.ipynb
@@ -2,14 +2,14 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "20 ['REGISTRATIONNO', 'PATIENTNAME', 'CITYNAME', 'DISTRICTNAME', 'STATENAME', 'PHONE', 'ADMITDATETIME', 'DISCHARGEDATETIME', 'COMPANY NAME', 'DEPARTMENT', 'DISCOUNTAMOUNT', 'BILLAMOUNT', 'ROOM TARIFF', 'PHARMACY', 'Investigations', 'Bedside Procedures', 'Physiotherapy', 'Surgeries', 'CONSUMABLES', 'Doctor Consultations']\n"
+      "True True True\n"
      ]
     }
    ],
@@ -39,11 +39,26 @@
     "                           'Physiotherapy', 'Surgeries', 'CONSUMABLES', 'Doctor Consultations']\n",
     "        return no_of_columns, list_of_headers\n",
     "    \n",
+    "    def validation_fn(self, patient_discharge_df, no_of_columns, list_of_header):\n",
+    "        \"\"\"\n",
+    "        This method will check 3 parameters to validate data file \n",
+    "        i)   delimeter check \n",
+    "        ii)  header content check\n",
+    "        iii) no. of columns check\n",
+    "        \n",
+    "        return: delimiter_check, header_content_check, no_of_columns_check\n",
+    "        \"\"\"\n",
+    "        delimiter_check = len(patient_discharge_df.columns) > 1\n",
+    "        header_content_check = list_of_headers == list(patient_discharge_df)\n",
+    "        no_of_columns_check = len(patient_discharge_df.columns) == no_of_columns\n",
+    "        return delimiter_check, header_content_check, no_of_columns_check\n",
+    "    \n",
     "if __name__ == '__main__':\n",
     "    pdclean = PatientDischargeCleaning()\n",
     "    patient_discharge_df = pdclean.read_csv()\n",
     "    no_of_columns, list_of_headers = pdclean.benchmark()\n",
-    "    print(no_of_columns, list_of_headers)\n"
+    "    delimiter_check, header_content_check, no_of_columns_check = pdclean.validation_fn(patient_discharge_df, no_of_columns, list_of_headers)\n",
+    "    print(delimiter_check, header_content_check, no_of_columns_check)\n"
    ]
   },
   {
