Added clean_data method for patient discharge details script

--- a/patient_discharge_details_script.ipynb
+++ b/patient_discharge_details_script.ipynb
@@ -2,14 +2,47 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "True True True\n"
+      "   registrationno patientname  cityname districtname       statename  \\\n",
+      "0               1     Osbourn  JAMNAGAR     JAMNAGAR         GUJARAT   \n",
+      "1               2     Malvina    AMRELI       AMRELI         GUJARAT   \n",
+      "2               3      Maible     MAVDI        Alwar       Rajasthan   \n",
+      "3               4        Jada    Bhopal       Bhopal  Madhya Pradesh   \n",
+      "4               5      Farrel   VERAVAL     JUNAGADH         GUJARAT   \n",
+      "\n",
+      "                           phone     admitdatetime dischargedatetime  \\\n",
+      "0                     9662455135  30-03-2014 12:23    1/4/2014 13:32   \n",
+      "1  9,57,49,96,26,49,72,57,00,000    1/4/2014 11:25    1/4/2014 14:34   \n",
+      "2                     9879858082     1/4/2014 7:15     2/4/2014 7:15   \n",
+      "3                     8758505694  31-03-2014 14:13    2/4/2014 10:50   \n",
+      "4                     9925512494  28-03-2014 20:18    2/4/2014 12:55   \n",
+      "\n",
+      "   company_name     department  discountamount  billamount  room_tariff  \\\n",
+      "0  MENDATA CASH     CARDIOLOGY               0        6459         2200   \n",
+      "1  MENDATA CASH       ONCOLOGY               0        9994         1100   \n",
+      "2  MENDATA CASH  CRITICAL CARE               0       43717         4500   \n",
+      "3  MENDATA CASH    PEDIATIRICS               0        5594         2200   \n",
+      "4         GUVNL       ONCOLOGY            5354       40769         3000   \n",
+      "\n",
+      "   pharmacy  investigations  bedside_procedures  physiotherapy  surgeries  \\\n",
+      "0   2481.09             620               460.0            NaN        NaN   \n",
+      "1   4937.50               0              2810.0            NaN        NaN   \n",
+      "2  10372.67            5300              9090.0            NaN        NaN   \n",
+      "3    352.22             630               460.0            NaN        NaN   \n",
+      "4   1714.23            8140              9880.0            NaN        NaN   \n",
+      "\n",
+      "   consumables  doctor_consultations  \n",
+      "0      1132.70                   NaN  \n",
+      "1       546.50                 450.0  \n",
+      "2     14520.43                2200.0  \n",
+      "3      1472.30                1200.0  \n",
+      "4      4204.70                3150.0  \n"
      ]
     }
    ],
@@ -53,12 +86,25 @@
     "        no_of_columns_check = len(patient_discharge_df.columns) == no_of_columns\n",
     "        return delimiter_check, header_content_check, no_of_columns_check\n",
     "    \n",
+    "    def clean_data(self, patient_discharge_df):\n",
+    "        \"\"\"\n",
+    "        This method cleans inconsistent data and converts datatype of some columns\n",
+    "        i)   lower column name\n",
+    "        ii)  replace spacing between column headers with underscore\n",
+    "        \"\"\"\n",
+    "        patient_discharge_df.columns = map(str.lower, patient_discharge_df.columns)\n",
+    "        patient_discharge_df.columns = patient_discharge_df.columns.str.replace(\" \", \"_\")\n",
+    "        return patient_discharge_df\n",
+    "    \n",
     "if __name__ == '__main__':\n",
     "    pdclean = PatientDischargeCleaning()\n",
     "    patient_discharge_df = pdclean.read_csv()\n",
     "    no_of_columns, list_of_headers = pdclean.benchmark()\n",
     "    delimiter_check, header_content_check, no_of_columns_check = pdclean.validation_fn(patient_discharge_df, no_of_columns, list_of_headers)\n",
-    "    print(delimiter_check, header_content_check, no_of_columns_check)\n"
+    "    if delimiter_check and header_content_check and no_of_columns_check:\n",
+    "        patient_discharge_clean_df = pdclean.clean_data(patient_discharge_df)\n",
+    "        print(patient_discharge_clean_df.head())\n",
+    "        "
    ]
   },
   {
