converted admitdatetime and dischargedatetime to standard format

--- a/patient_discharge_details_script.ipynb
+++ b/patient_discharge_details_script.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -16,12 +16,12 @@
       "3               4        Jada    Bhopal       Bhopal  Madhya Pradesh   \n",
       "4               5      Farrel   VERAVAL     JUNAGADH         GUJARAT   \n",
       "\n",
-      "                           phone     admitdatetime dischargedatetime  \\\n",
-      "0                     9662455135  30-03-2014 12:23    1/4/2014 13:32   \n",
-      "1  9,57,49,96,26,49,72,57,00,000    1/4/2014 11:25    1/4/2014 14:34   \n",
-      "2                     9879858082     1/4/2014 7:15     2/4/2014 7:15   \n",
-      "3                     8758505694  31-03-2014 14:13    2/4/2014 10:50   \n",
-      "4                     9925512494  28-03-2014 20:18    2/4/2014 12:55   \n",
+      "                           phone       admitdatetime   dischargedatetime  \\\n",
+      "0                     9662455135 2014-03-30 12:23:00 2014-01-04 13:32:00   \n",
+      "1  9,57,49,96,26,49,72,57,00,000 2014-01-04 11:25:00 2014-01-04 14:34:00   \n",
+      "2                     9879858082 2014-01-04 07:15:00 2014-02-04 07:15:00   \n",
+      "3                     8758505694 2014-03-31 14:13:00 2014-02-04 10:50:00   \n",
+      "4                     9925512494 2014-03-28 20:18:00 2014-02-04 12:55:00   \n",
       "\n",
       "   company_name     department  discountamount  billamount  room_tariff  \\\n",
       "0  MENDATA CASH     CARDIOLOGY               0        6459         2200   \n",
@@ -94,6 +94,8 @@
     "        \"\"\"\n",
     "        patient_discharge_df.columns = map(str.lower, patient_discharge_df.columns)\n",
     "        patient_discharge_df.columns = patient_discharge_df.columns.str.replace(\" \", \"_\")\n",
+    "        patient_discharge_df['admitdatetime'] = pd.to_datetime(patient_discharge_df['admitdatetime'])\n",
+    "        patient_discharge_df['dischargedatetime'] = pd.to_datetime(patient_discharge_df['dischargedatetime'])\n",
     "        return patient_discharge_df\n",
     "    \n",
     "if __name__ == '__main__':\n",
