added write_csv method for patient_dicharge_details script

--- a/patient_discharge_details_script.ipynb
+++ b/patient_discharge_details_script.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -98,6 +98,14 @@
     "        patient_discharge_df['dischargedatetime'] = pd.to_datetime(patient_discharge_df['dischargedatetime'])\n",
     "        return patient_discharge_df\n",
     "    \n",
+    "    def write_clean_csv(self, patient_discharge_clean_df):\n",
+    "        \"\"\"\n",
+    "        this method  will write clean_patient_discharge_details_dump.csv file in cleanfiles/ directory\n",
+    "        return: True\n",
+    "        \"\"\"\n",
+    "        patient_discharge_clean_df.to_csv('clean_files/clean_patient_discharge_details_dump.csv',encoding='utf-8', index=False)\n",
+    "        return True\n",
+    "    \n",
     "if __name__ == '__main__':\n",
     "    pdclean = PatientDischargeCleaning()\n",
     "    patient_discharge_df = pdclean.read_csv()\n",
@@ -106,6 +114,7 @@
     "    if delimiter_check and header_content_check and no_of_columns_check:\n",
     "        patient_discharge_clean_df = pdclean.clean_data(patient_discharge_df)\n",
     "        print(patient_discharge_clean_df.head())\n",
+    "        pdclean.write_clean_csv(patient_discharge_clean_df)\n",
     "        "
    ]
   },
