--- a/patient_discharge_details_script.ipynb
+++ b/patient_discharge_details_script.ipynb
@@ -2,52 +2,12 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 21,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "   registrationno patientname  cityname districtname       statename  \\\n",
-      "0               1     Osbourn  JAMNAGAR     JAMNAGAR         GUJARAT   \n",
-      "1               2     Malvina    AMRELI       AMRELI         GUJARAT   \n",
-      "2               3      Maible     MAVDI        Alwar       Rajasthan   \n",
-      "3               4        Jada    Bhopal       Bhopal  Madhya Pradesh   \n",
-      "4               5      Farrel   VERAVAL     JUNAGADH         GUJARAT   \n",
-      "\n",
-      "                           phone       admitdatetime   dischargedatetime  \\\n",
-      "0                     9662455135 2014-03-30 12:23:00 2014-01-04 13:32:00   \n",
-      "1  9,57,49,96,26,49,72,57,00,000 2014-01-04 11:25:00 2014-01-04 14:34:00   \n",
-      "2                     9879858082 2014-01-04 07:15:00 2014-02-04 07:15:00   \n",
-      "3                     8758505694 2014-03-31 14:13:00 2014-02-04 10:50:00   \n",
-      "4                     9925512494 2014-03-28 20:18:00 2014-02-04 12:55:00   \n",
-      "\n",
-      "   company_name     department  discountamount  billamount  room_tariff  \\\n",
-      "0  MENDATA CASH     CARDIOLOGY               0        6459         2200   \n",
-      "1  MENDATA CASH       ONCOLOGY               0        9994         1100   \n",
-      "2  MENDATA CASH  CRITICAL CARE               0       43717         4500   \n",
-      "3  MENDATA CASH    PEDIATIRICS               0        5594         2200   \n",
-      "4         GUVNL       ONCOLOGY            5354       40769         3000   \n",
-      "\n",
-      "   pharmacy  investigations  bedside_procedures  physiotherapy  surgeries  \\\n",
-      "0   2481.09             620               460.0            NaN        NaN   \n",
-      "1   4937.50               0              2810.0            NaN        NaN   \n",
-      "2  10372.67            5300              9090.0            NaN        NaN   \n",
-      "3    352.22             630               460.0            NaN        NaN   \n",
-      "4   1714.23            8140              9880.0            NaN        NaN   \n",
-      "\n",
-      "   consumables  doctor_consultations  \n",
-      "0      1132.70                   NaN  \n",
-      "1       546.50                 450.0  \n",
-      "2     14520.43                2200.0  \n",
-      "3      1472.30                1200.0  \n",
-      "4      4204.70                3150.0  \n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import pandas as pd\n",
+    "import numpy as np\n",
     "\n",
     "class PatientDischargeCleaning:\n",
     "    \n",
@@ -96,6 +56,8 @@
     "        patient_discharge_df.columns = patient_discharge_df.columns.str.replace(\" \", \"_\")\n",
     "        patient_discharge_df['admitdatetime'] = pd.to_datetime(patient_discharge_df['admitdatetime'])\n",
     "        patient_discharge_df['dischargedatetime'] = pd.to_datetime(patient_discharge_df['dischargedatetime'])\n",
+    "        patient_discharge_df['phone'] = patient_discharge_df['phone'].apply(lambda x: x if len(x) == 10 else '8888999999')\n",
+    "        patient_discharge_df.fillna(0, inplace=True)\n",
     "        return patient_discharge_df\n",
     "    \n",
     "    def write_clean_csv(self, patient_discharge_clean_df):\n",
@@ -113,7 +75,7 @@
     "    delimiter_check, header_content_check, no_of_columns_check = pdclean.validation_fn(patient_discharge_df, no_of_columns, list_of_headers)\n",
     "    if delimiter_check and header_content_check and no_of_columns_check:\n",
     "        patient_discharge_clean_df = pdclean.clean_data(patient_discharge_df)\n",
-    "        print(patient_discharge_clean_df.head())\n",
+    "#         print(patient_discharge_clean_df.head())\n",
     "        pdclean.write_clean_csv(patient_discharge_clean_df)\n",
     "        "
    ]
