Added doc string for clean method

--- a/patient_discharge_details_script.ipynb
+++ b/patient_discharge_details_script.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -51,6 +51,8 @@
     "        This method cleans inconsistent data and converts datatype of some columns\n",
     "        i)   lower column name\n",
     "        ii)  replace spacing between column headers with underscore\n",
+    "        iii) filter phone no. to 10 digits\n",
+    "        iv)  replace nan with 0\n",
     "        \"\"\"\n",
     "        patient_discharge_df.columns = map(str.lower, patient_discharge_df.columns)\n",
     "        patient_discharge_df.columns = patient_discharge_df.columns.str.replace(\" \", \"_\")\n",
