--- a/department_wise_patient_discount.ipynb
+++ b/department_wise_patient_discount.ipynb
@@ -2,60 +2,79 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "                                    registrationno        phone  \\\n",
-      "department               added_amt                                \n",
-      "BONE AND JOINT HOSPITALS 57625.87              184   9825075922   \n",
-      "                         205098.29             554   9898422441   \n",
-      "                         361484.85             365   9824200003   \n",
-      "CARDIOLOGY               0.00                 1962  28767920079   \n",
-      "                         7735.76               540   9879278710   \n",
-      "\n",
-      "                                    discountamount  billamount  room_tariff  \\\n",
-      "department               added_amt                                            \n",
-      "BONE AND JOINT HOSPITALS 57625.87                0       29314         3300   \n",
-      "                         205098.29               0      105346         8800   \n",
-      "                         361484.85               0      187998        39800   \n",
-      "CARDIOLOGY               0.00                    0           0            0   \n",
-      "                         7735.76                 0        3943            0   \n",
-      "\n",
-      "                                    pharmacy  investigations  \\\n",
-      "department               added_amt                             \n",
-      "BONE AND JOINT HOSPITALS 57625.87    3619.17            1645   \n",
-      "                         205098.29   8189.51            1540   \n",
-      "                         361484.85  10168.77            8160   \n",
-      "CARDIOLOGY               0.00           0.00               0   \n",
-      "                         7735.76      742.96               0   \n",
-      "\n",
-      "                                    bedside_procedures  physiotherapy  \\\n",
-      "department               added_amt                                      \n",
-      "BONE AND JOINT HOSPITALS 57625.87                632.0            0.0   \n",
-      "                         205098.29              1160.0            0.0   \n",
-      "                         361484.85              5310.0         1350.0   \n",
-      "CARDIOLOGY               0.00                      0.0            0.0   \n",
-      "                         7735.76                 180.0            0.0   \n",
-      "\n",
-      "                                    surgeries  consumables  \\\n",
-      "department               added_amt                           \n",
-      "BONE AND JOINT HOSPITALS 57625.87     16200.0      2915.70   \n",
-      "                         205098.29    74800.0      5262.78   \n",
-      "                         361484.85    97800.0     10898.08   \n",
-      "CARDIOLOGY               0.00             0.0         0.00   \n",
-      "                         7735.76          0.0      2869.80   \n",
-      "\n",
-      "                                    doctor_consultations  \n",
-      "department               added_amt                        \n",
-      "BONE AND JOINT HOSPITALS 57625.87                 1650.0  \n",
-      "                         205098.29                2750.0  \n",
-      "                         361484.85               11450.0  \n",
-      "CARDIOLOGY               0.00                        0.0  \n",
-      "                         7735.76                     0.0  \n"
+      "department\n",
+      "BONE AND JOINT HOSPITALS               624209.01\n",
+      "CARDIOLOGY                           25333310.44\n",
+      "CHEST MEDICINE                        5188292.15\n",
+      "CRITICAL CARE                        10934678.74\n",
+      "ENDOCRINOLOGY                          145362.00\n",
+      "ENT                                    371287.71\n",
+      "GASTROENTEROLOGY & G.I. ENDOSCOPY     7760825.33\n",
+      "GENERAL SURGERY                       4045835.33\n",
+      "GYNAECOLOGY                           1328589.16\n",
+      "INTERNAL MEDICINE                     4949630.45\n",
+      "MINIMAL ACCESS SURGERY HOSPITAL        139420.92\n",
+      "NEPHROLOGY                             717767.92\n",
+      "NEURO SURGERY                        23705725.27\n",
+      "NEUROLOGY                             1824318.83\n",
+      "ONCOLOGY                              9755083.86\n",
+      "ORTHOPAEDIC                           9809981.11\n",
+      "PEDIATIRICS                           2957005.50\n",
+      "PLASTIC SURGERY                       1469061.39\n",
+      "RADIOLOGY                              511912.86\n",
+      "UROLOGY                               2994441.97\n",
+      "Name: added_amt, dtype: float64\n",
+      "department\n",
+      "BONE AND JOINT HOSPITALS               3\n",
+      "CARDIOLOGY                           223\n",
+      "CHEST MEDICINE                        42\n",
+      "CRITICAL CARE                         69\n",
+      "ENDOCRINOLOGY                          1\n",
+      "ENT                                    1\n",
+      "GASTROENTEROLOGY & G.I. ENDOSCOPY     71\n",
+      "GENERAL SURGERY                       26\n",
+      "GYNAECOLOGY                           17\n",
+      "INTERNAL MEDICINE                     35\n",
+      "MINIMAL ACCESS SURGERY HOSPITAL        2\n",
+      "NEPHROLOGY                             9\n",
+      "NEURO SURGERY                        162\n",
+      "NEUROLOGY                             19\n",
+      "ONCOLOGY                             135\n",
+      "ORTHOPAEDIC                           54\n",
+      "PEDIATIRICS                           71\n",
+      "PLASTIC SURGERY                       16\n",
+      "RADIOLOGY                              5\n",
+      "UROLOGY                               39\n",
+      "Name: patientname, dtype: int64\n",
+      "department\n",
+      "BONE AND JOINT HOSPITALS                   0\n",
+      "CARDIOLOGY                           1990011\n",
+      "CHEST MEDICINE                        178991\n",
+      "CRITICAL CARE                         300101\n",
+      "ENDOCRINOLOGY                           2923\n",
+      "ENT                                        0\n",
+      "GASTROENTEROLOGY & G.I. ENDOSCOPY      82418\n",
+      "GENERAL SURGERY                        67520\n",
+      "GYNAECOLOGY                           134451\n",
+      "INTERNAL MEDICINE                     109087\n",
+      "MINIMAL ACCESS SURGERY HOSPITAL            0\n",
+      "NEPHROLOGY                              7058\n",
+      "NEURO SURGERY                         688654\n",
+      "NEUROLOGY                              76500\n",
+      "ONCOLOGY                              366757\n",
+      "ORTHOPAEDIC                           555925\n",
+      "PEDIATIRICS                           105777\n",
+      "PLASTIC SURGERY                        85053\n",
+      "RADIOLOGY                              13274\n",
+      "UROLOGY                                49903\n",
+      "Name: discountamount, dtype: int64\n"
      ]
     }
    ],
@@ -67,8 +86,13 @@
     "\n",
     "# patient_df[\"added_amt\"] = patient_df[\"discountamount\"] + patient_df[\"billamount\"] + patient_df[\"room_tariff\"] + patient_df[\"pharmacy\"] + patient_df[\"investigations\"] + patient_df[\"bedside_procedures\"] + patient_df[\"physiotherapy\"] + patient_df[\"surgeries\"] + patient_df[\"consumables\"] + patient_df[\"doctor_consultations\"] \n",
     "patient_df['added_amt']=patient_df.iloc[:,10:19].sum(axis=1)\n",
-    "new = patient_df.groupby(['department', 'added_amt']).sum()\n",
-    "print(new.head())"
+    "\n",
+    "group_by_department = patient_df.groupby(\"department\")[\"added_amt\"].sum()\n",
+    "group_by_no_of_patient = patient_df.groupby(\"department\")[\"patientname\"].count()\n",
+    "group_by_discountamount = patient_df.groupby(\"department\")[\"discountamount\"].sum()\n",
+    "print(group_by_department)\n",
+    "print(group_by_no_of_patient)\n",
+    "print(group_by_discountamount)"
    ]
   },
   {
