added top 10 patient with max added_amt

--- a/department_wise_patient_discount.ipynb
+++ b/department_wise_patient_discount.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -30,7 +30,8 @@
       "PEDIATIRICS                         2851228.50           71          105777\n",
       "PLASTIC SURGERY                     1384008.39           16           85053\n",
       "RADIOLOGY                            498638.86            5           13274\n",
-      "UROLOGY                             2944538.97           39           49903\n"
+      "UROLOGY                             2944538.97           39           49903\n",
+      "['registrationno', 'patientname', 'cityname', 'districtname', 'statename', 'phone', 'admitdatetime', 'dischargedatetime', 'company_name', 'department', 'discountamount', 'billamount', 'room_tariff', 'pharmacy', 'investigations', 'bedside_procedures', 'physiotherapy', 'surgeries', 'consumables', 'doctor_consultations', 'added_amt']\n"
      ]
     }
    ],
@@ -45,6 +46,35 @@
     "# department wise sum of 'added_amt', count of 'patientname' and sum of 'discountamount'\n",
     "group_by_department = patient_df.groupby(\"department\").agg({'added_amt':'sum','patientname':'count','discountamount':'sum'})\n",
     "print(group_by_department)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "patientname   added_amt\n",
+      "       Dolf  1528592.55\n",
+      "       Aron  1259722.65\n",
+      "       Judi  1146433.34\n",
+      "  Timotheus  1143893.95\n",
+      "       Opal  1121483.64\n",
+      "     Yasmin  1001624.72\n",
+      "      Darya   927497.90\n",
+      "     Nanine   884241.32\n",
+      "       Burt   821912.11\n",
+      "     Vinnie   802197.69\n"
+     ]
+    }
+   ],
+   "source": [
+    "patient_df = patient_df.nlargest(10, ['added_amt']) \n",
+    "top_ten_added_amt_patient_df = patient_df[['patientname', 'added_amt']]\n",
+    "print(top_ten_added_amt_patient_df.to_string(index= False))"
    ]
   },
   {
