Added top 10 departments with patient of max added_amt

--- a/department_wise_patient_discount.ipynb
+++ b/department_wise_patient_discount.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -30,8 +30,7 @@
       "PEDIATIRICS                         2851228.50           71          105777\n",
       "PLASTIC SURGERY                     1384008.39           16           85053\n",
       "RADIOLOGY                            498638.86            5           13274\n",
-      "UROLOGY                             2944538.97           39           49903\n",
-      "['registrationno', 'patientname', 'cityname', 'districtname', 'statename', 'phone', 'admitdatetime', 'dischargedatetime', 'company_name', 'department', 'discountamount', 'billamount', 'room_tariff', 'pharmacy', 'investigations', 'bedside_procedures', 'physiotherapy', 'surgeries', 'consumables', 'doctor_consultations', 'added_amt']\n"
+      "UROLOGY                             2944538.97           39           49903\n"
      ]
     }
    ],
@@ -50,7 +49,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -72,9 +71,33 @@
     }
    ],
    "source": [
-    "patient_df = patient_df.nlargest(10, ['added_amt']) \n",
-    "top_ten_added_amt_patient_df = patient_df[['patientname', 'added_amt']]\n",
+    "patient_df_largest_ten = patient_df.nlargest(10, ['added_amt']) \n",
+    "top_ten_added_amt_patient_df = patient_df_largest_ten[['patientname', 'added_amt']]\n",
     "print(top_ten_added_amt_patient_df.to_string(index= False))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "TypeError",
+     "evalue": "first() missing 1 required positional argument: 'offset'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-32-037b24ee14b5>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mgroup_by_department\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mpatient_df\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msort_values\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"added_amt\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mgroupby\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m\"department\"\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\"patientname\"\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0magg\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m{\u001b[0m\u001b[0;34m'added_amt'\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m'max'\u001b[0m\u001b[0;34m}\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mfirst\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      2\u001b[0m \u001b[0;31m# print(pd.merge(group_by_department,patient_df,on='patientname'))\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0;31m# df.sort_values('B').groupby('A').first()\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mgroup_by_department\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mTypeError\u001b[0m: first() missing 1 required positional argument: 'offset'"
+     ]
+    }
+   ],
+   "source": [
+    "group_by_department = patient_df.sort_values(\"added_amt\").groupby([\"department\",\"patientname\"]).agg({'added_amt':'max'}).first()\n",
+    "# print(pd.merge(group_by_department,patient_df,on='patientname'))\n",
+    "# df.sort_values('B').groupby('A').first()\n",
+    "print(group_by_department)"
    ]
   },
   {
